Formulated the HTML and RMD files
Formulated the HTML and RMD files

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'R : Exploring and Visualizing Extracted Dimensions from Principal Component Algorithms'
 author: "John Pauline Pineda"
-date: "June 02, 2023"
+date: "June 10, 2023"
 output: 
   html_document:
     toc: true
@@ -77,6 +77,7 @@ library(RColorBrewer)
 library(stats)
 library(factoextra)
 library(FactoMineR)
+library(gplots)
 
 ##################################
 # Loading source and
@@ -114,6 +115,7 @@ Oscars$Year <- factor(Oscars$Year,
                                  "2023"))
 
 Oscars$Genre          <- as.factor(Oscars$Genre)
+Oscars$SideGenre      <- as.factor(Oscars$SideGenre)
 Oscars$Picture        <- as.factor(Oscars$Picture)
 Oscars$Cinematography <- as.factor(Oscars$Cinematography)
 Oscars$Directing      <- as.factor(Oscars$Directing)
@@ -142,11 +144,14 @@ PDA <- Oscars
 |
 | **[A]** No missing observations noted for any variable.
 |
-| **[B]** No low variance observed for any variable with First.Second.Mode.Ratio>5.
+| **[B]** Low variance observed for 1 variable with First.Second.Mode.Ratio>5.
+|      **[B.1]** <span style="color: #FF0000">Picture</span> variable (factor)
 |
 | **[C]** No low variance observed for any variable with Unique.Count.Ratio<0.01.
 |
-| **[D]** High skewness observed for 14 variables with Skewness>3 or Skewness<(-3).
+| **[D]** No high skewness observed for any variable with Skewness>3 or Skewness<(-3).
+|
+| **[E]** Considering the unsupervised learning nature of the analysis, no data pre-processing was proceeded to address the data quality issue identified.
 |
 ```{r section_1.2, warning=FALSE, message=FALSE}
 ##################################
@@ -378,7 +383,6 @@ if (length(names(DQA.Descriptors.Numeric))==0) {
 # Formulating dataset for
 # Principal Component Analysis
 ##################################
-
 Oscars.PCA <- Oscars[,c("Tomatometer_Critic",
                         "Tomatometer_Audience",
                         "IMDB_Critic",
@@ -391,6 +395,89 @@ row.names(Oscars.PCA) <- Oscars$Film
 dim(Oscars.PCA)
 str(Oscars.PCA)
 summary(Oscars.PCA)
+
+##################################
+# Formulating dataset for
+# Correspondence Analysis
+##################################
+Oscars.CA.Cinematography <- Oscars[,c("Genre",
+                       "Cinematography")]
+
+(Oscars.CA.Cinematography <- as.data.frame.matrix(
+  table(Oscars.CA.Cinematography$Genre,Oscars.CA.Cinematography$Cinematography)))
+
+Oscars.CA.Directing <- Oscars[,c("Genre",
+                       "Directing")]
+
+(Oscars.CA.Directing <- as.data.frame.matrix(
+  table(Oscars.CA.Directing$Genre,Oscars.CA.Directing$Directing)))
+
+Oscars.CA.Editing <- Oscars[,c("Genre",
+                       "Editing")]
+
+(Oscars.CA.Editing <- as.data.frame.matrix(
+  table(Oscars.CA.Editing$Genre,Oscars.CA.Editing$Editing)))
+
+Oscars.CA.Screenplay <- Oscars[,c("Genre",
+                       "Screenplay")]
+
+(Oscars.CA.Screenplay <- as.data.frame.matrix(
+  table(Oscars.CA.Screenplay$Genre,Oscars.CA.Screenplay$Screenplay)))
+
+
+
+
+
+
+
+
+
+##################################
+# Formulating dataset for
+# Multiple Correspondence Analysis
+##################################
+Oscars.MCA <- Oscars[,c("Genre",
+                       "Picture",
+                       "Cinematography",
+                       "Editing",
+                       "Screenplay")]
+
+(Oscars.MCA.Picture <- as.data.frame.matrix(
+  table(Oscars.MCA$Genre,Oscars.MCA$Picture)))
+colnames(Oscars.MCA.Picture) <- c("Picture_NOM",
+                                 "Picture_WON")
+Oscars.MCA.Picture$Film <- rownames(Oscars.MCA.Picture)
+Oscars.MCA.Picture <- Oscars.MCA.Picture[,c(3,1,2)]
+
+(Oscars.MCA.Cinematography <- as.data.frame.matrix(
+  table(Oscars.MCA$Genre,Oscars.MCA$Cinematography)))
+colnames(Oscars.MCA.Cinematography) <- c("Cinematography_NNOM",
+                                        "Cinematography_NOM",
+                                        "Cinematography_WON")
+Oscars.MCA.Cinematography$Film <- rownames(Oscars.MCA.Cinematography)
+
+(Oscars.MCA.Editing <- as.data.frame.matrix(
+  table(Oscars.MCA$Genre,Oscars.MCA$Editing)))
+colnames(Oscars.MCA.Editing) <- c("Editing_NNOM",
+                                 "Editing_NOM",
+                                 "Editing_WON")
+Oscars.MCA.Editing$Film <- rownames(Oscars.MCA.Editing)
+
+
+(Oscars.MCA.Screenplay <- as.data.frame.matrix(
+  table(Oscars.MCA$Genre,Oscars.MCA$Screenplay)))
+colnames(Oscars.MCA.Screenplay) <- c("Screenplay_NNOM",
+                                    "Screenplay_NOM",
+                                    "Screenplay_WON")
+Oscars.MCA.Screenplay$Film <- rownames(Oscars.MCA.Screenplay)
+
+Oscars.MCA <- left_join(Oscars.MCA.Picture,Oscars.MCA.Cinematography)
+Oscars.MCA <- left_join(Oscars.MCA,Oscars.MCA.Editing)
+Oscars.MCA <- left_join(Oscars.MCA,Oscars.MCA.Cinematography)
+(Oscars.MCA <- left_join(Oscars.MCA,Oscars.MCA.Screenplay))
+dim(Oscars.MCA)
+str(Oscars.MCA)
+summary(Oscars.MCA)
 
 
 ```
@@ -772,6 +859,233 @@ DR_PCA_IND$contrib[,c("Dim.1","Dim.2")]
 ###  1.5.2 Correspondence Analysis (CA)
 |
 ```{r section_1.5.2, warning=FALSE, message=FALSE}
+##################################
+# Loading dataset
+##################################
+SD_CA_Cinematography <- Oscars.CA.Cinematography
+
+balloonplot(t(as.table(as.matrix(SD_CA_Cinematography))),
+            main="Cinematography by Film Genre",
+            xlab="Cinematography",
+            ylab="Genre",
+            label=FALSE,
+            show.margins=FALSE)
+
+##################################
+# Conducting a Chi-Square Test
+##################################
+(SD_CA_Cinematography_CHSQ <- chisq.test(SD_CA_Cinematography))
+  
+##################################
+# Performing CA
+##################################
+DR_CA_Cinematography <- CA(SD_CA_Cinematography,
+                           graph = FALSE)
+
+##################################
+# Obtaining the CA eigenvalues
+##################################
+(DR_CA_Cinematography_EV <- get_eigenvalue(DR_CA_Cinematography))
+
+##################################
+# Formulating the Scree Plot
+# for the variances
+##################################
+(DR_CA_Cinematography_VarianceScreePlot <- fviz_eig(DR_CA_Cinematography, 
+                                                    addlabels = TRUE, 
+                                                    ylim = c(0, 100),
+                                                    choice = c("variance")) +
+  labs(title = "CA : Scree Plot of Explained Variances",
+       subtitle = "Top 2 Principal Components",
+       y = "Percentage of Explained Variances",
+       x = "Principal Components") +
+  theme_classic())
+
+##################################
+# Formulating the Scree Plot
+# for the eigenvalues
+##################################
+(DR_CA_Cinematography_EigenvalueScreePlot <- fviz_eig(DR_CA_Cinematography, 
+                                                      addlabels = TRUE,
+                                                      ylim = c(0, 6),
+                                                      choice = c("eigenvalue")) +
+  labs(title = "CA : Scree Plot of Eigenvalues",
+       subtitle = "Top 2 Principal Components",
+       y = "Eigenvalues",
+       x = "Principal Components") +
+  theme_classic())
+
+##################################
+# Extracting the CA 
+# results for row descriptor variables
+##################################
+(DR_CA_Cinematography_ROW <- get_ca_row(DR_CA_Cinematography))
+
+##################################
+# Extracting the coordinates
+# representing the loadings
+# for the row descriptor variabless
+##################################
+DR_CA_Cinematography_ROW$coord
+
+##################################
+# Extracting the quality of representation
+# for the row descriptor variables
+# on the factor map 
+##################################
+DR_CA_Cinematography_ROW$cos2
+
+##################################
+# Extracting the contributions 
+# (in percentage) of the row descriptor variables
+# to the principal components
+##################################
+DR_CA_Cinematography_ROW$contrib
+
+##################################
+# Extracting the contribution 
+# of the row descriptor variables
+# for the the Top 1 and 2 principal components
+##################################
+(DR_CA_Cinematography_ROW_PCVariableContributors <- fviz_contrib(DR_CA_Cinematography, 
+                                                             choice = "row", 
+                                                             axes = 1:2) +
+  labs(title = "CA : Row Descriptor Variable Contribution",
+       subtitle = "Principal Components 1 and 2 Contributors",
+       x = "Descriptors") +
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)))
+
+##################################
+# Extracting the contribution 
+# of the row descriptor variables
+# for the the Top 1 principal component
+##################################
+(DR_CA_Cinematography_ROW_PC1VariableContributors <- fviz_contrib(DR_CA_Cinematography, 
+                                                             choice = "row", 
+                                                             axes = 1) +
+  labs(title = "CA : Row Descriptor Variable Contribution",
+       subtitle = "Principal Component 1 Contributors",
+       x = "Descriptors") +
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)))
+
+##################################
+# Extracting the contribution 
+# of the row descriptor variables
+# for the the Top 2 principal component
+##################################
+(DR_CA_Cinematography_ROW_PC2VariableContributors <- fviz_contrib(DR_CA_Cinematography, 
+                                                             choice = "row", 
+                                                             axes = 2) +
+  labs(title = "CA : Row Descriptor Variable Contribution",
+       subtitle = "Principal Component 2 Contributors",
+       x = "Descriptors") +
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)))
+
+##################################
+# Extracting the CA 
+# results for column descriptor variables
+##################################
+(DR_CA_Cinematography_COL <- get_ca_col(DR_CA_Cinematography))
+
+##################################
+# Extracting the coordinates
+# representing the loadings
+# for the column descriptor variabless
+##################################
+DR_CA_Cinematography_COL$coord
+
+##################################
+# Extracting the quality of representation
+# for the column descriptor variables
+# on the factor map 
+##################################
+DR_CA_Cinematography_COL$cos2
+
+##################################
+# Extracting the contributions 
+# (in percentage) of the column descriptor variables
+# to the principal components
+##################################
+DR_CA_Cinematography_COL$contrib
+
+##################################
+# Extracting the contribution 
+# of the column descriptor variables
+# for the the Top 1 and 2 principal components
+##################################
+(DR_CA_Cinematography_COL_PCVariableContributors <- fviz_contrib(DR_CA_Cinematography, 
+                                                             choice = "col", 
+                                                             axes = 1:2) +
+  labs(title = "CA : Column Descriptor Variable Contribution",
+       subtitle = "Principal Components 1 and 2 Contributors",
+       x = "Descriptors") +
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)))
+
+##################################
+# Extracting the contribution 
+# of the column descriptor variables
+# for the the Top 1 principal component
+##################################
+(DR_CA_Cinematography_COL_PC1VariableContributors <- fviz_contrib(DR_CA_Cinematography, 
+                                                             choice = "col", 
+                                                             axes = 1) +
+  labs(title = "CA : Column Descriptor Variable Contribution",
+       subtitle = "Principal Component 1 Contributors",
+       x = "Descriptors") +
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)))
+
+##################################
+# Extracting the contribution 
+# of the column descriptor variables
+# for the the Top 2 principal component
+##################################
+(DR_CA_Cinematography_COL_PC2VariableContributors <- fviz_contrib(DR_CA_Cinematography, 
+                                                             choice = "col", 
+                                                             axes = 2) +
+  labs(title = "CA : Col Descriptor Variable Contribution",
+       subtitle = "Principal Component 2 Contributors",
+       x = "Descriptors") +
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)))
+
+##################################
+# Formulating the Symmetric Biplot 
+# using the row and column
+# descriptor variable loadings
+# for the Top 1 and Top 2 principal components
+##################################
+(DR_CA_SymmetricBiplot <- fviz_ca_biplot(DR_CA_Cinematography, 
+              label="all",
+              geom = "text",
+              repel = TRUE) +
+  labs(title = "CA : Symmetric Biplot",
+       subtitle = "Row versus Column Descriptor Variable Loadings",
+       x = "Principal Component 1",
+       y = "Principal Component 2") +
+  theme_classic())
+
+##################################
+# Formulating the Asymmetric Biplot 
+# using the row and column
+# descriptor variable loadings
+# for the Top 1 and Top 2 principal components
+##################################
+(DR_CA_SymmetricBiplot <- fviz_ca_biplot(DR_CA_Cinematography, 
+              label="all",
+              geom = "text",
+              repel = TRUE,
+              map = "symbiplot") +
+  labs(title = "CA : Asymmetric Biplot",
+       subtitle = "Row versus Column Descriptor Variable Loadings",
+       x = "Principal Component 1",
+       y = "Principal Component 2") +
+  theme_classic())
+
 
 ```
 
